@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.906 2008-03-25 22:20:44 castaglia Exp $
+$Id: NEWS,v 1.907 2008-03-27 01:47:35 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -137,6 +137,8 @@ CVS
 - Bug 2840 - Online Certificate Status Protocol (OCSP) support.
 - Bug 3058 - Handling of OPTS command results in badly set values in code.
 - Bug 3059 - Wrong handling of UTF8 conversions.
+- Bug 3061 - Segfault in mod_quotatab_sql if the SQL query returns NULL
+  bytes/files values.
 
 1.3.1 - Released 5-Oct-2007
 --------------------------------
